--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,15 @@
                     <header>COPYING.txt</header>
                 </configuration>
             </plugin>
-
+ <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-scm-plugin</artifactId>
+        <version>1.6</version>
+        <configuration>
+          <username>username</username>
+          <password>password</password>
+        </configuration>
+      </plugin>
         </plugins>
     </build>
     <pluginRepositories>
