--- a/release.properties
+++ b/release.properties
@@ -1,14 +1,8 @@
 #release configuration
-#Tue Sep 14 16:03:44 CEST 2010
-project.scm.info.touret.gcontacts\:gcontacts-backup.developerConnection=scm\:hg\:https\://gcontacts-backup.googlecode.com/hg/gcontacts-backup
-scm.tag=gcontacts-backup-1.0
-scm.url=scm\:hg\:https\://gcontacts-backup.googlecode.com/hg/gcontacts-backup
+#Tue Apr 10 22:37:03 CEST 2012
 preparationGoals=clean verify
-project.dev.info.touret.gcontacts\:gcontacts-backup=1.1-SNAPSHOT
-project.scm.info.touret.gcontacts\:gcontacts-backup.tag=HEAD
-project.scm.info.touret.gcontacts\:gcontacts-backup.url=http\://code.google.com/p/gcontacts-backup/source/browse/
 scm.commentPrefix=[maven-release-plugin] 
-project.rel.info.touret.gcontacts\:gcontacts-backup=1.0
-project.scm.info.touret.gcontacts\:gcontacts-backup.connection=scm\:hg\:https\://gcontacts-backup.googlecode.com/hg/gcontacts-backup
-exec.additionalArguments=-P jboss.as,jboss.repository,jaxwsplugin.repository,gae,jdk6,openjpa,wls,dev,site,openjpa
-completedPhase=run-preparation-goals
+remoteTagging=true
+exec.additionalArguments=-P jelastic
+completedPhase=check-poms
+scm.url=scm\:hg\:https\://gcontacts-backup.googlecode.com/hg/gcontacts-backup
