--- a/release.properties
+++ b/release.properties
@@ -1,8 +1,15 @@
 #release configuration
-#Tue Apr 10 22:37:03 CEST 2012
-preparationGoals=clean verify
-scm.commentPrefix=[maven-release-plugin] 
-remoteTagging=true
-exec.additionalArguments=-P jelastic
-completedPhase=check-poms
+#Tue Apr 10 22:40:17 CEST 2012
+project.scm.info.touret.gcontacts\:gcontacts-backup.developerConnection=scm\:hg\:https\://gcontacts-backup.googlecode.com/hg/gcontacts-backup
+scm.tag=gcontacts-backup-1.2
 scm.url=scm\:hg\:https\://gcontacts-backup.googlecode.com/hg/gcontacts-backup
+preparationGoals=clean verify
+project.dev.info.touret.gcontacts\:gcontacts-backup=1.3-SNAPSHOT
+project.scm.info.touret.gcontacts\:gcontacts-backup.tag=HEAD
+project.scm.info.touret.gcontacts\:gcontacts-backup.url=http\://code.google.com/p/gcontacts-backup/source/browse/
+remoteTagging=true
+scm.commentPrefix=[maven-release-plugin] 
+project.rel.info.touret.gcontacts\:gcontacts-backup=1.2
+project.scm.info.touret.gcontacts\:gcontacts-backup.connection=scm\:hg\:https\://gcontacts-backup.googlecode.com/hg/gcontacts-backup
+exec.additionalArguments=-P jelastic
+completedPhase=end-release
